--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true; showStats: true;"
+      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true;"
       embedded
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
@@ -24,18 +24,12 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-text value="Loading AR Scene... Look for Marker!" position="0 0 -2" color="#FFF" width="4" align="center"></a-text>
-
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-text value="Marker Found! Checking Model..." position="0 0.5 0" color="#00FF00" width="1" align="center"></a-text>
-        
-        <a-plane position="0 0 0" width="0.5" height="0.5" color="#FF00FF" rotation="-90 0 0" material="side: double; wireframe: true;"></a-plane>
-
         <a-gltf-model
           src="#portalModel"
-          position="0 0.1 0"
+          position="0 0 0"
           scale="0.2 0.2 0.2"
-          rotation="0 180 0"
+          rotation="0 0 0"
         ></a-gltf-model>
       </a-entity>
     </a-scene>
