--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+
+      /* CSS FIX: Ensures the camera video feed displays correctly across devices */
+      video {
+        position: fixed !important; /* Pins video to the viewport */
+        top: 0 !important;          /* Aligns to the very top */
+        left: 0 !important;         /* Aligns to the very left */
+        width: 100vw !important;    /* Makes video fill full viewport width */
+        height: 100vh !important;   /* Makes video fill full viewport height */
+        object-fit: cover !important; /* Ensures video covers the entire area, cropping if aspect ratio differs */
+        z-index: -3 !important;     /* Places the video behind other AR elements and overlays */
+      }
     </style>
   </head>
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true;"
-      embedded
+      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true; showStats: false;" embedded
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
@@ -24,13 +34,16 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
+      <a-text value="Loading AR Scene... Look for Marker!" position="0 0 -2" color="#FFF" width="4" align="center"></a-text>
+
       <a-entity mindar-image-target="targetIndex: 0">
+        <a-text value="Marker Found! Checking Model..." position="0 0.5 0" color="#00FF00" width="1" align="center"></a-text>
+        
+        <a-plane position="0 0 0" width="0.5" height="0.5" color="#FF00FF" rotation="-90 0 0" material="side: double; wireframe: true;"></a-plane>
+
         <a-gltf-model
           src="#portalModel"
-          position="0 0 0"
-          scale="0.2 0.2 0.2"
-          rotation="0 0 0"
-        ></a-gltf-model>
+          position="0 0.1 0"           scale="0.2 0.2 0.2"         rotation="0 180 0"          ></a-gltf-model>
       </a-entity>
     </a-scene>
   </body>
