--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Neon Doorway AR Portal</title>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/aframe/mindar-image-aframe.prod.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
 
@@ -37,13 +37,12 @@
       <a-text value="Scanning for Marker..." position="0 0 -2" color="#FFF" width="4" align="center"></a-text>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-text value="Marker Tracked! Check Model Position." position="0 0.5 0" color="#00FF00" width="1" align="center"></a-text>
-        
-        <a-plane position="0 0 0" width="0.5" height="0.5" color="#FF00FF" rotation="-90 0 0" material="side: double; wireframe: true;"></a-plane>
-
-        <a-gltf-model
+        <a-text value="MARKER TRACKED!" position="0 1 0" color="#FF0000" width="3" align="center"></a-text> <a-plane position="0 0 0" width="1" height="1" color="#0000FF" rotation="-90 0 0"></a-plane> <a-gltf-model
           src="#portalModel"
-          position="0 0.1 0"           scale="0.2 0.2 0.2"         rotation="0 180 0"          ></a-gltf-model>
+          position="0 0.1 0"
+          scale="0.2 0.2 0.2"
+          rotation="0 180 0"
+        ></a-gltf-model>
       </a-entity>
     </a-scene>
   </body>
