--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   </head>
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true; showStats: false;" embedded
+      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true; showStats: false;"
+      embedded
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
@@ -37,14 +38,11 @@
       <a-text value="Scanning for Marker..." position="0 0 -2" color="#FFF" width="4" align="center"></a-text>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-text value="MARKER TRACKED! Check Model Position." position="0 1 0" color="#FF0000" width="3" align="center"></a-text> 
+        <a-text value="MARKER TRACKED! Testing Box." position="0 1 0" color="#FF0000" width="3" align="center"></a-text> 
         
         <a-plane position="0 0 0" width="1" height="1" color="#0000FF" rotation="-90 0 0"></a-plane>
 
-        <a-gltf-model
-          src="#portalModel"
-          position="0 0.1 0"           scale="0.2 0.2 0.2"         rotation="0 180 0"          ></a-gltf-model>
-      </a-entity>
+        <a-box position="0 0.5 0" color="#FFFF00" width="1" height="1" depth="1"></a-box> </a-entity>
     </a-scene>
   </body>
 </html>
