--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <title>Neon Doorway AR Portal</title>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
 
       /* CSS FIX: Ensures the camera video feed displays correctly across devices */
       video {
-        position: fixed !important; /* Pins video to the viewport */
-        top: 0 !important;          /* Aligns to the very top */
-        left: 0 !important;         /* Aligns to the very left */
-        width: 100vw !important;    /* Makes video fill full viewport width */
-        height: 100vh !important;   /* Makes video fill full viewport height */
-        object-fit: cover !important; /* Ensures video covers the entire area, cropping if aspect ratio differs */
-        z-index: -3 !important;     /* Places the video behind other AR elements and overlays */
+        position: fixed !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100vw !important;
+        height: 100vh !important;
+        object-fit: cover !important;
+        z-index: -3 !important;
       }
     </style>
   </head>
@@ -42,7 +42,9 @@
         
         <a-plane position="0 0 0" width="1" height="1" color="#0000FF" rotation="-90 0 0"></a-plane>
 
-        <a-box position="0 0.5 0" color="#FFFF00" width="1" height="1" depth="1"></a-box> </a-entity>
+        <a-box position="0 0.5 0" color="#FFFF00" width="1" height="1" depth="1"></a-box>
+
+        </a-entity>
     </a-scene>
   </body>
 </html>
