--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <title>Neon Doorway AR Portal</title>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image.prod.js"></script> 
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/aframe/mindar-image-aframe.prod.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-
       video {
         position: fixed !important; top: 0 !important; left: 0 !important;
         width: 100vw !important; height: 100vh !important;
@@ -18,48 +17,33 @@
   <body>
     <a-scene
       mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true; showStats: false;"
-      embedded
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: true"
+      embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights"
+      vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true"
     >
       <a-assets>
         <a-asset-item id="portalModel" src="./model/Portal.glb"></a-asset-item>
       </a-assets>
-
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
       <a-text value="Scanning for Marker..." position="0 0 -2" color="#FFF" width="4" align="center"></a-text>
-
       <a-entity mindar-image-target="targetIndex: 0" visible="false"> 
         <a-text value="MARKER TRACKED! Testing Box." position="0 1 0" color="#FF0000" width="3" align="center"></a-text> 
-        
         <a-plane position="0 0 0" width="1" height="1" color="#0000FF" rotation="-90 0 0"></a-plane>
-
         <a-box position="0 0.5 0" color="#FFFF00" width="1" height="1" depth="1"></a-box>
-
-        </a-entity>
+      </a-entity>
     </a-scene>
 
     <script>
-      // Wait for the A-Frame scene to fully load
       document.querySelector('a-scene').addEventListener('loaded', function() {
-        console.log('>>> CONSOLE: A-Frame Scene Loaded!'); // This will now fire reliably
-
+        console.log('>>> CONSOLE: A-Frame Scene Loaded!');
         const targetEntity = document.querySelector('a-entity[mindar-image-target]');
-
         if (targetEntity) {
-          // Listen for target found event
           targetEntity.addEventListener('targetFound', function() {
             console.log('--- targetFound event caught by custom listener ---');
-            targetEntity.setAttribute('visible', true); // Manually set visible to true
+            targetEntity.setAttribute('visible', true);
           });
-
-          // Listen for target lost event
           targetEntity.addEventListener('targetLost', function() {
             console.log('--- targetLost event caught by custom listener ---');
-            targetEntity.setAttribute('visible', false); // Manually set visible to false
+            targetEntity.setAttribute('visible', false);
           });
         } else {
           console.error(">>> CONSOLE: mindar-image-target entity not found after A-Frame scene loaded.");
