--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
 
       <!-- ✅ Required: tracker wrapper added -->
       <a-entity mindar-image-tracker>
-        <a-entity mindar-image-target="targetIndex: 0" visible="false">
+       <a-entity mindar-image-target="targetIndex: 0">
           <a-text value="MARKER TRACKED! Testing Box." position="0 1 0" color="#FF0000" width="3" align="center"></a-text>
           <a-plane position="0 0 -0.1" width="2" height="2" color="#0000FF" rotation="0 0 0"></a-plane>
-          <a-box position="0 0 -0.2" color="#FFFF00" width="1.5" height="1.5" depth="1.5"></a-box>
+          <a-box 
+  position="0 0 -0.5" 
+  color="#FFFF00" 
+  width="1" height="1" depth="1" 
+  scale="1.5 1.5 1.5"
+  rotation="90 0 0"
+></a-box>
+
         </a-entity>
       </a-entity>
     </a-scene>
