--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
 <a-scene
-  mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true; showStats: true;"
+  mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true;"
   embedded
   color-space="sRGB"
   renderer="colorManagement: true, physicallyCorrectLights"
