--- a/index.html
+++ b/index.html
@@ -1,72 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Neon Doorway AR Portal</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <style>
-      body { margin: 0; overflow: hidden; }
-      video {
-        position: fixed !important;
-        top: 0 !important;
-        left: 0 !important;
-        width: 100vw !important;
-        height: 100vh !important;
-        object-fit: cover !important;
-        z-index: -3 !important;
-      }
-    </style>
-  </head>
+<head>
+  <title>MindAR Basic Test</title>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+</head>
+<body>
+  <a-scene
+    mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.mind; autoStart: true;"
+    embedded
+    vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: true"
+  >
+    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-  <body>
-    <a-scene
-      mindar-image="imageTargetSrc: ./targets/NDCard.mind; autoStart: true;"
-      embedded
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: true"
-    >
-      <a-light type="ambient" intensity="1.2"></a-light>
-      <a-light type="directional" intensity="1" position="1 2 1"></a-light>
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-entity mindar-image-target="targetIndex: 0">
+      <a-plane color="blue" height="0.55" width="1"></a-plane>
+    </a-entity>
+  </a-scene>
+</body>
+</html>
 
-      <a-entity mindar-image-tracker>
-        <a-entity mindar-image-target="targetIndex: 0">
-          <a-entity position="0 0 0" rotation="0 0 0" scale="1 1 1">
-            <a-box 
-              position="0 0 0"
-              color="#FF00FF"
-              scale="1.5 1.5 1.5"
-              rotation="90 0 0"
-            ></a-box>
-
-            <a-gltf-model
-              src="./model/Portal.glb"
-              position="0 0 0"
-              scale="0.5 0.5 0.5"
-              rotation="90 0 0"
-            ></a-gltf-model>
-          </a-entity>
-        </a-entity>
-      </a-entity>
-    </a-scene>
-
-    <script>
-      document.querySelector('a-scene').addEventListener('loaded', function () {
-        const targetEntity = document.querySelector('[mindar-image-target]');
-        if (targetEntity) {
-          targetEntity.addEventListener('targetFound', function () {
-            console.log('--- targetFound event ---');
-            console.log('Position:', targetEntity.object3D.position);
-            console.log('Rotation:', targetEntity.object3D.rotation);
-          });
-          targetEntity.addEventListener('targetLost', function () {
-            console.log('--- targetLost event ---');
-          });
-        }
-      });
-    </script>
   </body>
 </html>
 
